<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_GMD" Id="{e07be9ee-1c30-4de2-9fbb-2a29f1e5894a}">
    <Declaration><![CDATA[VAR_GLOBAL

// FB_MKS317

{attribute 'pytmc' := ' pv: EM2K0:XGMD:GPI:10 '}
fb_EM2K0_XGMD_GPI_10 : FB_MKS317;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:GPI:50 '}
fb_EM2K0_XGMD_GPI_50 : FB_MKS317;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:GPI:90 '}
fb_EM2K0_XGMD_GPI_90 : FB_MKS317;
//change these TcLinkTo parameters when the Eplan is returned with final terminal placement
//for GPI 91, mks 275 convectron gauge, is this approrpriate naming convention.
//K0S2-DRL-02
//EL3174_03_12, pin: 3=AOUT?,7=SGND?
//EL9070_03_11, pin: 5=SHD
//EL9184_03_10, pin: 4= +24V DC, 9=GND 
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[EL3174_03_12]^AI Standard Channel 3^Value'}
{attribute 'pytmc' := '+ pv: EM2K0:XGMD:GPI:100 '}
fb_EM2K0_XGMD_GPI_100 : FB_MKS275;
// FB_PTM_TwisTorr

{attribute 'pytmc' := ' pv: EM2K0:XGMD:PTM:10 '}
fb_EM2K0_XGMD_PTM_10 : FB_PTM_TwisTorr;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:PTM:20 '}
fb_EM2K0_XGMD_PTM_20 : FB_PTM_TwisTorr;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:PTM:30 '}
fb_EM2K0_XGMD_PTM_30 : FB_PTM_TwisTorr;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:PTM:40 '}
fb_EM2K0_XGMD_PTM_40 : FB_PTM_TwisTorr;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:PTM:50 '}
fb_EM2K0_XGMD_PTM_50 : FB_PTM_TwisTorr;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:PTM:60 '}
fb_EM2K0_XGMD_PTM_60 : FB_PTM_TwisTorr;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:PTM:70 '}
fb_EM2K0_XGMD_PTM_70 : FB_PTM_TwisTorr;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:PTM:80 '}
fb_EM2K0_XGMD_PTM_80 : FB_PTM_TwisTorr;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:PTM:90 '}
fb_EM2K0_XGMD_PTM_90 : FB_PTM_TwisTorr;
// FB_VRC

{attribute 'pytmc' := ' pv: EM2K0:XGMD:VRC:10 '}
fb_EM2K0_XGMD_VRC_10 : FB_VRC;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:VRC:20 '}
fb_EM2K0_XGMD_VRC_20 : FB_VRC;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:VRC:30 '}
fb_EM2K0_XGMD_VRC_30 : FB_VRC;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:VRC:40 '}
fb_EM2K0_XGMD_VRC_40 : FB_VRC;
//{attribute 'pytmc' := ' pv: EM2K0:XGMD:VRC:50 '}
//fb_EM2K0_XGMD_VRC_50 : FB_VRC;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:VRC:60 '}
fb_EM2K0_XGMD_VRC_60 : FB_VRC;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:VRC:70 '}
fb_EM2K0_XGMD_VRC_70 : FB_VRC;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:VRC:80 '}
fb_EM2K0_XGMD_VRC_80 : FB_VRC;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:VRC:90 '}
fb_EM2K0_XGMD_VRC_90 : FB_VRC;

// FB_MKS422

{attribute 'pytmc' := ' pv: EM2K0:XGMD:GCC:10 '}
fb_EM2K0_XGMD_GCC_10 : FB_MKS422;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:GCC:20 '}
fb_EM2K0_XGMD_GCC_20 : FB_MKS422;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:GCC:30 '}
fb_EM2K0_XGMD_GCC_30 : FB_MKS422;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:GCC:40 '}
fb_EM2K0_XGMD_GCC_40 : FB_MKS422;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:GCC:50 '}
fb_EM2K0_XGMD_GCC_50 : FB_MKS422;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:GCC:60 '}
fb_EM2K0_XGMD_GCC_60 : FB_MKS422;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:GCC:70 '}
fb_EM2K0_XGMD_GCC_70 : FB_MKS422;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:GCC:80 '}
fb_EM2K0_XGMD_GCC_80 : FB_MKS422;
{attribute 'pytmc' := ' pv: EM2K0:XGMD:GCC:90 '}
fb_EM2K0_XGMD_GCC_90 : FB_MKS422;

// FB_EbaraEVA

{attribute 'pytmc' := ' pv: EM2K0:XGMD:PRT:50 '}
fb_EM2K0_XGMD_PRT_50 : FB_EbaraEVA;

//update these links when final placement is updated in EPLAN link all of these
//for GPI
//K0S2-DRL-01
//EL2794_02_24, pin: 1=REMOT+,2=REMOT- ,5=RSET+, 6=RSET-,4=RUN+,3=RUN-
//EL1004_02_25, pin: 1=STAT+, 2=STAT-, 5=ALRMNC+, 6 = ALRMNC-
//switch to channel 3 of EL1004_02_25 for status of PRT:100
//switch to channel 4 of " "" for alarm of PRT:100

{attribute 'TcLinkTo' := 	'.q_xRunDo	:=	TIIB[EL2794_02_24]^Channel 3^Output;
    .q_xRemote	:=	TIIB[EL2794_02_24]^Channel 1^Output;
    .q_xResetAlarm	:=	TIIB[EL2794_02_24]^Channel 2^Output;
    .i_xAlarmOK	:=	TIIB[EL2794_02_25]^Channel 4^Input;
    .i_xIsRun	:=	TIIB[EL1004_02_25]^Channel 3^Input'}
{attribute 'pytmc' := ' pv: EM2K0:XGMD:PRT:100 '}
fb_EM2K0_XGMD_PRT_100 : FB_EbaraEVA;

// FB_VVC
{attribute 'pytmc' := ' pv: EM2K0:XGMD:VVC:50 '}
fb_EM2K0_XGMD_VVC_50 : FB_VVC;
//Roughing DC Valves
{attribute 'pytmc' := ' pv: EM2K0:XGMD:VRO:50 '}
{attribute 'TcLinkTo' := 	'.q_xOPN_DO	:=	TIIB[EL2212_02_19]^DOX Control Channel 2^Control^Output'}
fb_EM1K0_GMD_VRO_50 : FB_VVC;
//update with DRL position of EL2212?
//peterpaul 51z0158TCCM
//KOS2_DRL-02
//EL2212_03_13 pin: 1 = +?, 2= -? 
{attribute 'pytmc' := ' pv: EM2K0:XGMD:VRO:100 '}
{attribute 'TcLinkTo' := 	'.q_xOPN_DO	:=	TIIB[EL2212_03_13]^DOX Control Channel 1^Control^Output'}
fb_EM1K0_GMD_VRO_100 : FB_VVC;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>