<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_GMD" Id="{febc07a9-f1e9-4dc5-b21e-96967800d0f7}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_GMD
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
// FB_MKS317

fb_EM2K0_XGMD_GPI_10(PG=>);
fb_EM2K0_XGMD_GPI_50(PG=>);
fb_EM2K0_XGMD_GPI_90(PG=>);

// FB_PTM_TwisTorr

fb_EM2K0_XGMD_PTM_10(i_xExtILKOk := TRUE);
fb_EM2K0_XGMD_PTM_20(i_xExtILKOk := TRUE);
fb_EM2K0_XGMD_PTM_30(i_xExtILKOk := TRUE);
fb_EM2K0_XGMD_PTM_40(i_xExtILKOk := TRUE);
fb_EM2K0_XGMD_PTM_50(i_xExtILKOk := TRUE);
fb_EM2K0_XGMD_PTM_60(i_xExtILKOk := TRUE);
fb_EM2K0_XGMD_PTM_70(i_xExtILKOk := TRUE);
fb_EM2K0_XGMD_PTM_80(i_xExtILKOk := TRUE);
fb_EM2K0_XGMD_PTM_90(i_xExtILKOk := TRUE);

// FB_VRC

fb_EM2K0_XGMD_VRC_10(i_xExtILK_OK := TRUE, i_xOverrideMode := xSystemOverrideMode);
fb_EM2K0_XGMD_VRC_20(i_xExtILK_OK := TRUE, i_xOverrideMode := xSystemOverrideMode);
fb_EM2K0_XGMD_VRC_30(i_xExtILK_OK := TRUE, i_xOverrideMode := xSystemOverrideMode);
fb_EM2K0_XGMD_VRC_40(i_xExtILK_OK := TRUE, i_xOverrideMode := xSystemOverrideMode);
fb_EM2K0_XGMD_VRC_60(i_xExtILK_OK := TRUE, i_xOverrideMode := xSystemOverrideMode);
fb_EM2K0_XGMD_VRC_70(i_xExtILK_OK := TRUE, i_xOverrideMode := xSystemOverrideMode);
fb_EM2K0_XGMD_VRC_80(i_xExtILK_OK := TRUE, i_xOverrideMode := xSystemOverrideMode);
fb_EM2K0_XGMD_VRC_90(i_xExtILK_OK := TRUE, i_xOverrideMode := xSystemOverrideMode);

// FB_MKS422

fb_EM2K0_XGMD_GCC_10(PG := fb_EM2K0_XGMD_GPI_50.PG);
fb_EM2K0_XGMD_GCC_20(PG := fb_EM2K0_XGMD_GPI_50.PG);
fb_EM2K0_XGMD_GCC_30(PG := fb_EM2K0_XGMD_GPI_50.PG);
fb_EM2K0_XGMD_GCC_40(PG := fb_EM2K0_XGMD_GPI_50.PG);
fb_EM2K0_XGMD_GCC_50(PG := fb_EM2K0_XGMD_GPI_50.PG);
fb_EM2K0_XGMD_GCC_60(PG := fb_EM2K0_XGMD_GPI_50.PG);
fb_EM2K0_XGMD_GCC_70(PG := fb_EM2K0_XGMD_GPI_50.PG);
fb_EM2K0_XGMD_GCC_80(PG := fb_EM2K0_XGMD_GPI_50.PG);
fb_EM2K0_XGMD_GCC_90(PG := fb_EM2K0_XGMD_GPI_50.PG);

// FB_EbaraEVA
fb_EM2K0_XGMD_PRT_50(i_xExtIlkOK := TRUE);
]]></ST>
    </Implementation>
    <LineIds Name="PRG_GMD">
      <LineId Id="6" Count="15" />
      <LineId Id="52" Count="1" />
      <LineId Id="22" Count="5" />
      <LineId Id="67" Count="0" />
      <LineId Id="29" Count="2" />
      <LineId Id="54" Count="1" />
      <LineId Id="32" Count="8" />
      <LineId Id="65" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>